fixed bundle 29 and chloe gliders

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -208,16 +208,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	{%endif%}
 
 
-	<!-- Global site tag (gtag.js) - Google AdWords: 833925430 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-833925430"></script>
+<!-- Global site tag (gtag.js) - Google Ads: 802406479 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-802406479"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
+
+  gtag('config', 'AW-802406479');
+  gtag('config', 'AW-802413680');
   gtag('config', 'AW-833925430');
 </script>
-
-
 
 
 </head>
@@ -328,24 +329,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
 
-<!-- Google Code for Remarketing Tag -->
-<!--------------------------------------------------
-Remarketing tags may not be associated with personally identifiable information or placed on pages related to sensitive categories. See more information and instructions on how to setup the tag on: http://google.com/ads/remarketingsetup
---------------------------------------------------->
-<script type="text/javascript">
-/* <![CDATA[ */
-var google_conversion_id = 802406479;
-var google_custom_params = window.google_tag_params;
-var google_remarketing_only = true;
-/* ]]> */
-</script>
-<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
-</script>
-<noscript>
-<div style="display:inline;">
-<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/802406479/?guid=ON&amp;script=0"/>
-</div>
-</noscript>
+
 
 {% if template == 'index' %}
 {{ 'home.js' | asset_url | script_tag }}
