--- a/assets/app-settings.scss.liquid
+++ b/assets/app-settings.scss.liquid
@@ -417,7 +417,7 @@ body.index .products li {
 
   /*SY inserted */
   #site-body .button {
-    display: block !important;
+    // display: block !important;
   }
 
   .footer-widgets-top {
